ignore more files

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
-/PLANS/
-*.sw*
-todo.txt
-!.gitignore
-/MANIFEST
 /META.yml
 /Makefile
 /Makefile.old
-/MooseX-AlwaysCoerce-*.tar.gz
+/MANIFEST
+/MANIFEST.bak
 /blib/
 /inc/
 /pm_to_blib
+/PLANS/
+*.sw*
+todo.txt
+.*
+!.gitignore
+MooseX-
