--- a/dist.ini
+++ b/dist.ini
@@ -29,5 +29,54 @@ Test::More  = 0
 Test::Fatal = 0
 Test::NoWarnings = 1.04
 
+[InstallGuide]
+[MetaConfig]
+[MetaJSON]
+
+[PkgVersion]
+
+[NoTabsTests]
+[EOLTests]
+[Test::Compile]
+[Test::DistManifest]
+[Test::MinimumVersion]
+[Test::CPAN::Changes]
+[Test::ChangesHasContent]
+
+[Test::CheckDeps]
+:version = 0.005
+fatal = 1
+
+[PodSyntaxTests]
+[CheckPrereqsIndexed]
+
+[Git::Remote::Check]
+remote_branch = master
+
+[Git::Check]
+allow_dirty =
+
+[Git::CheckFor::CorrectBranch]
+:version = 0.004
+release_branch = master
+release_branch = stable
+
+; TODO: requires fixes for calculating last version
+; [Git::CheckFor::Fixups]
+
 [NextRelease]
 format = %-9v %{yyyy-MM-dd HH:mm:ss ZZZZ}d
+
+[Git::Commit]
+allow-dirty = Changes
+commit_msg = %N-%v%t%n%n%c
+
+[Git::Tag]
+tag_message = v%v%t
+
+[Git::Push]
+
+[InstallRelease]
+install_command = cpanm .
+
+[Clean]
