dist.ini improvements
- edit "git describe" data into the main package for the dist
- include trial status in version in Changes
- Test::CPAN::Meta has been fixed: MetaTests now work

--- a/dist.ini
+++ b/dist.ini
@@ -33,6 +33,7 @@ Test::NoWarnings = 1.04
 [MetaConfig]
 [MetaJSON]
 
+[Git::Describe]
 [PkgVersion]
 
 [NoTabsTests]
@@ -42,6 +43,7 @@ Test::NoWarnings = 1.04
 [Test::MinimumVersion]
 [Test::CPAN::Changes]
 [Test::ChangesHasContent]
+[MetaTests]
 
 [Test::CheckDeps]
 :version = 0.005
@@ -65,7 +67,8 @@ release_branch = stable
 ; [Git::CheckFor::Fixups]
 
 [NextRelease]
-format = %-9v %{yyyy-MM-dd HH:mm:ss ZZZZ}d
+:version = 4.300018
+format = %-8V  %{yyyy-MM-dd HH:mm:ss ZZZZ}d (%U)
 
 [Git::Commit]
 allow-dirty = Changes
