--- a/dist.ini
+++ b/dist.ini
@@ -15,7 +15,11 @@ repository.url    = git://git.moose.perl.org/MooseX-AlwaysCoerce.git
 repository.web    = http://git.shadowcat.co.uk/gitweb/gitweb.cgi?p=gitmo/MooseX-AlwaysCoerce.git;a=summary
 repository.type   = git
 
-[@Basic]
+[@Filter]
+-bundle = @Basic
+-remove = GatherDir
+
+[Git::GatherDir]
 
 [Prereqs / RuntimeRequires]
 Moose = 0
