typo in config parameter

--- a/dist.ini
+++ b/dist.ini
@@ -74,7 +74,7 @@ release_branch = stable
 format = %-8V  %{yyyy-MM-dd HH:mm:ss ZZZZ}d (%U)
 
 [Git::Commit]
-allow-dirty = Changes
+allow_dirty = Changes
 commit_msg = %N-%v%t%n%n%c
 
 [Git::Tag]
