find prereqs automatically

--- a/dist.ini
+++ b/dist.ini
@@ -21,17 +21,11 @@ repository.type   = git
 
 [Git::GatherDir]
 
-[Prereqs / RuntimeRequires]
-Moose = 0
-namespace::autoclean = 0.12
-MooseX::ClassAttribute = 0.24
-Package::Stash = 0.26
-Carp = 0
+[AutoPrereqs]
+skip = ^MyRole$
 
-[Prereqs / TestRequires]
-Test::More  = 0
-Test::Fatal = 0
-Test::NoWarnings = 1.04
+[Prereqs / RuntimeRequires]
+Package::Stash = 0.26
 
 [InstallGuide]
 [MetaConfig]
