include r/w repo in comments

--- a/dist.ini
+++ b/dist.ini
@@ -12,6 +12,7 @@ license     = Perl_5
 [MetaResources]
 bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=MooseX-AlwaysCoerce
 repository.url    = git://git.moose.perl.org/MooseX-AlwaysCoerce.git
+; r/w repository: git@github.com:karenetheridge/mx-alwayscoerce.git
 repository.web    = http://git.shadowcat.co.uk/gitweb/gitweb.cgi?p=gitmo/MooseX-AlwaysCoerce.git;a=summary
 repository.type   = git
 
