add "provides" and minimum perl version to metadata

--- a/dist.ini
+++ b/dist.ini
@@ -30,10 +30,11 @@ Package::Stash = 0.26
 
 [InstallGuide]
 [MetaConfig]
+[MetaProvides::Package]
 [MetaJSON]
-
 [Git::Describe]
 [PkgVersion]
+[MinimumPerl]
 
 [NoTabsTests]
 [EOLTests]
