more pod tests, and test the version

--- a/dist.ini
+++ b/dist.ini
@@ -38,18 +38,21 @@ Package::Stash = 0.26
 
 [NoTabsTests]
 [EOLTests]
+[PodSyntaxTests]
+[Test::Pod::LinkCheck]
+[Test::Pod::No404s]
+
 [Test::Compile]
+[CheckPrereqsIndexed]
 [Test::MinimumVersion]
-[Test::CPAN::Changes]
-[Test::ChangesHasContent]
 [MetaTests]
+[Test::CPAN::Changes]
+[Test::Version]
+[Test::ChangesHasContent]
 
 [Test::CheckDeps]
 :version = 0.005
 fatal = 1
-
-[PodSyntaxTests]
-[CheckPrereqsIndexed]
 
 [Git::Remote::Check]
 remote_branch = master
