add pod coverage tests

--- a/dist.ini
+++ b/dist.ini
@@ -39,6 +39,7 @@ Package::Stash = 0.26
 [NoTabsTests]
 [EOLTests]
 [PodSyntaxTests]
+[PodCoverageTests]
 [Test::Pod::LinkCheck]
 [Test::Pod::No404s]
 
