add missing authordep

--- a/dist.ini
+++ b/dist.ini
@@ -14,4 +14,6 @@ AutoPrereqs.skip = ^MyRole$
 [Prereqs / RuntimeRequires]
 Package::Stash = 0.26
 
+; authordep Pod::Weaver::Section::Contributors
+
 [ContributorsFromGit]
