--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,3 @@
-/.build
+/.build/
 !.gitignore
-/PLANS/
-*.bs
-/xs/*.c
-*.o
-cover_db
-*.gc??
-test-mydeps-*
-nytprof*
-*.sw*
-/MooseX-*
+/MooseX-AlwaysCoerce-*
