--- a/dist.ini
+++ b/dist.ini
@@ -1,90 +1,18 @@
 name        = MooseX-AlwaysCoerce
 author      = Rafael Kitover <rkitover@cpan.org>
-author      = Michael G. Schwern <mschwern@cpan.org>
-author      = Karen Etheridge <ether@cpan.org>
+copyright_holder = Rafael Kitover <rkitover@cpan.org>
+copyright_year = 2009
 abstract    = Automatically enable coercions for Moose attributes
 license     = Perl_5
 
-; version is taken from the last git tag, plus 1.
-; override with the V environment variable.
-[Git::NextVersion]
-
-[MetaResources]
-bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=MooseX-AlwaysCoerce
-repository.url    = git://git.moose.perl.org/MooseX-AlwaysCoerce.git
-; r/w repository: gitmo@git.moose.perl.org:MooseX-AlwaysCoerce.git
-repository.web    = http://git.shadowcat.co.uk/gitweb/gitweb.cgi?p=gitmo/MooseX-AlwaysCoerce.git;a=summary
-repository.type   = git
-
-[@Filter]
--bundle = @Basic
--remove = GatherDir
-
-[Git::GatherDir]
-
-[AutoPrereqs]
-skip = ^MyRole$
+[@Author::ETHER]
+:version = 0.019
+server = gitmo
+Authority.authority = cpan:RKITOVER
+AutoPrereqs.skip = ^MyRole$
+-remove = PodWeaver
 
 [Prereqs / RuntimeRequires]
 Package::Stash = 0.26
 
-[InstallGuide]
-[MetaConfig]
-[MetaProvides::Package]
-[MetaJSON]
-[Git::Describe]
-[PkgVersion]
-[MinimumPerl]
-
-[NoTabsTests]
-[EOLTests]
-[PodSyntaxTests]
-[PodCoverageTests]
-[Test::Pod::LinkCheck]
-[Test::Pod::No404s]
-
-[Test::Compile]
-[CheckPrereqsIndexed]
-[Test::MinimumVersion]
-[MetaTests]
-[Test::CPAN::Changes]
-[Test::Version]
-[Test::ChangesHasContent]
-
-[Test::CheckDeps]
-:version = 0.005
-fatal = 1
-
-[Git::Remote::Check]
-remote_branch = master
-
-[Git::Check]
-:version = 1.22460
-allow_dirty =
-
-[Git::CheckFor::CorrectBranch]
-:version = 0.004
-release_branch = master
-release_branch = stable
-
-; TODO: requires fixes for calculating last version
-; [Git::CheckFor::Fixups]
-
-[NextRelease]
-:version = 4.300018
-format = %-8V  %{yyyy-MM-dd HH:mm:ss ZZZZ}d (%U)
-
-[Git::Commit]
-allow_dirty = Changes
-commit_msg = %N-%v%t%n%n%c
-
-[Git::Tag]
-tag_format = v%v%t
-tag_message = v%v%t
-
-[Git::Push]
-
-[InstallRelease]
-install_command = cpanm .
-
-[Clean]
+[ContributorsFromGit]
