make release tests pass

--- a/dist.ini
+++ b/dist.ini
@@ -9,6 +9,7 @@ license     = Perl_5
 server = gitmo
 Authority.authority = cpan:RKITOVER
 AutoPrereqs.skip = ^MyRole$
+-remove = Test::UnusedVars  ; we like our $class
 
 [Prereqs / RuntimeRequires]
 Package::Stash = 0.26
