--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,7 @@ license     = Perl_5
 
 [@Author::ETHER]
 :version = 0.019
-server = gitmo
+server = github
 Authority.authority = cpan:RKITOVER
 AutoPrereqs.skip = ^MyRole$
 -remove = Test::UnusedVars  ; we like our $class
