add missing authordep on Test::Warnings, used in tests

--- a/dist.ini
+++ b/dist.ini
@@ -14,6 +14,9 @@ AutoPrereqs.skip = ^MyRole$
 [Prereqs / RuntimeRequires]
 Package::Stash = 0.26
 
+[Prereqs / DevelopRequires]
+Test::Warnings = 0
+
 ; authordep Pod::Weaver::Section::Contributors
 
 [ContributorsFromGit]
