add irc and mailinglist addresses to metadata

--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,10 @@ Authority.authority = cpan:RKITOVER
 AutoPrereqs.skip = ^MyRole$
 -remove = Test::UnusedVars  ; we like our $class
 
+[MetaResources]
+x_IRC = irc://irc.perl.org/#moose
+x_MailingList = http://lists.perl.org/list/moose.html
+
 [Prereqs / RuntimeRequires]
 Package::Stash = 0.26
 
