add optional test prereqs required by developers

--- a/dist.ini
+++ b/dist.ini
@@ -20,6 +20,8 @@ Package::Stash = 0.26
 
 [Prereqs / DevelopRequires]
 Test::Warnings = 0
+MooseX::Method::Signatures = 0
+MooseX::Role::Parameterized = 0.25
 
 ; authordep Pod::Weaver::Section::Contributors
 
