--- a/dist.ini
+++ b/dist.ini
@@ -24,3 +24,6 @@ MooseX::Method::Signatures = 0
 MooseX::Role::Parameterized = 0.25
 
 ; authordep Pod::Weaver::Section::Contributors
+
+[Test::CheckBreaks]
+conflicts_module = Moose::Conflicts
