--- a/dist.ini
+++ b/dist.ini
@@ -9,6 +9,7 @@ license     = Perl_5
 Authority.authority = cpan:RKITOVER
 AutoPrereqs.skip = ^MyRole$
 -remove = Test::UnusedVars  ; we like our $class
+Test::MinimumVersion.max_target_perl = 5.008003
 
 [MetaResources]
 x_IRC = irc://irc.perl.org/#moose
