--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,7 @@ Authority.authority = cpan:RKITOVER
 AutoPrereqs.skip = ^MyRole$
 -remove = Test::UnusedVars  ; we like our $class
 Test::MinimumVersion.max_target_perl = 5.008003
+StaticInstall.dry_run = 0   ; we can safely set this here
 
 [MetaResources]
 x_IRC = irc://irc.perl.org/#moose
