--- a/dist.ini
+++ b/dist.ini
@@ -25,4 +25,6 @@ MooseX::Method::Signatures = 0
 MooseX::Role::Parameterized = 0.25
 
 [Test::CheckBreaks]
+:version = 0.017
 conflicts_module = Moose::Conflicts
+conflicts_module = Module::Runtime::Conflicts
