use new-style authority config

--- a/dist.ini
+++ b/dist.ini
@@ -5,8 +5,8 @@ copyright_year = 2009
 license     = Perl_5
 
 [@Author::ETHER]
-:version = 0.094
-Authority.authority = cpan:RKITOVER
+:version = 0.117
+authority = cpan:RKITOVER
 AutoPrereqs.skip = ^MyRole$
 -remove = Test::UnusedVars  ; we like our $class
 Test::MinimumVersion.max_target_perl = 5.008003
